@@ -33,7 +33,7 @@
         </oaf_attribute>
         <oaf_attribute name="name" type="string" _value="Keyboard Indicator"/>
         <oaf_attribute name="description" type="string" _value="Keyboard layout indicator"/>
-        <oaf_attribute name="panel:icon" type="string" value="gswitchit-applet.png"/>
+        <oaf_attribute name="panel:icon" type="string" value="input-keyboard"/>
         <oaf_attribute name="bugzilla:bugzilla" type="string" value="GNOME"/>
         <oaf_attribute name="bugzilla:product" type="string" value="gnome-applets"/>
         <oaf_attribute name="bugzilla:component" type="string" value="keyboard indicator (gswitchit)"/>
