@@ -1,3 +1,10 @@
+2008-03-12  Callum McKenzie  <callum@spooky-possum.org>
+
+	* Makefile.am:
+	* gswitchit-applet.c:
+	* GNOME_KeyboardApplet.server.in.in: Patch from Jaap Haitsma to
+	use the standard tango naming scheme (Bug #519758).
+
 2008-01-14  Gil Forcada  <gforcada@gnome.org>
 
 	* help/ca/ca.po: Added Catalan translation.
